<resources>
    <string name="app_name">To Do Or Not To Do</string>
    <string name="add_list">+ New List</string>
    <string name="all_lists">All Lists</string>
    <string name="add_task">+ New task</string>
    <string name="list_settings">List Settings</string>
    <string name="list_properties">List Properties</string>
    <string name="add_new_list">Add New List</string>
    <string name="enter_list_title">Enter List Title: </string>
    <string name="clear_button">Clear </string>
    <string name="save_button">Save </string>
    <string name="add_new_task">Add New Task</string>
    <string name="name_enter">Name:</string>
    <string name="date_task">Due Date:</string>
    <string name="time_task">Due Time:</string>
    <string name="priority_task">Priority:</string>
    <string name="category_task">Category:</string>
    <string name="subtask_task">Subtask Of:</string>
    <string name="notes_task">Notes:</string>
    <string name="add_category_main">New Category Main</string>
    <string name="add_category_list">New Category List</string>
    <string name="default_category_list">Default Font:</string>
    <string name="font_category_list">List Font:</string>
    <string name="color_category_list">Default Text Color:</string>
    <string name="list_color_category_list">List Text Color:</string>
    <string name="background_category_list">Default Background Color:</string>
    <string name="background_list_category_list">List Background Color:</string>
    <string name="color_wheel_button">Color Wheel</string>
    <string name="font_enter">Font:</string>
    <string name="text_color">Text Color:</string>
    <string name="background_color">Background Color:</string>
    <string name="view_categories">Viewing Categories:</string>
    <string name="add_categories">add Category:</string>
    <string name="list_sort">List Sort:</string>
    <string name="button_date">Due Date</string>
    <string name="button_time">Due Time</string>
    <string name="button_priority">Priority</string>
    <string name="button_category">Category</string>
    <string name="completed_tasks">How To Handle Completed Tasks:</string>
    <string name="button_show">Show</string>
    <string name="button_hide">Hide</string>
    <string name="button_delete">Delete</string>
    <string name="edit_category_main">Edit Category Main</string>
    <string name="edit_category_list">Edit Category List</string>
    <string name="edit_task">Edit Task</string>
    <string name="selecting_color">Selecting Color</string>
    <string name="button_choose_color">Select Color</string>
    <string name="color_selected">Here is the color you selected:</string>
    <string name="button_finish_color">Set Color</string>
    <string name="menu_back">Back</string>
    <string name="menu_edit_task">Edit Task</string>
    <string name="menu_save">save</string>
    <string name="button_delete_list">Delete List</string>
    <string name="button_delete_task">Delete Task</string>
    <string name="prompt_confirm_delete">Are you sure?</string>
</resources>