<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:text="@string/add_new_list"
        android:textAlignment="center"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/textInputListTitleAd"
        android:layout_width="409dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/enter_list_title"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSaveAd"
            android:layout_width="204dp"
            android:layout_height="47dp"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/buttonClearAd"
            android:layout_width="204dp"
            android:layout_height="47dp"
            android:text="@string/clear_button" />
    </LinearLayout>

</LinearLayout>