<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contextClickable="true"
    tools:context="@string/all_lists">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:contextClickable="true"
            android:labelFor="@id/textViewListTitle"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/textViewListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_categories"
            android:textAlignment="center"
            android:textSize="24sp" />

        <include
            layout="@layout/view_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/buttonAddTaskLv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_categories"
        app:layout_anchor="@+id/appbar"
        app:layout_anchorGravity="bottom|center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>